--- a/Project/Stonks.ipynb
+++ b/Project/Stonks.ipynb
@@ -33,17 +33,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decided to put the running env code into a file to make this easier, it takes a decision function (also in separate files)\n",
+    "\n",
+    "This is the code\n",
+    "\n",
+    "'''\n",
+    "df = pd.read_csv(\"FOREX_EURUSD_1H_ASK_DAILY.csv\")\n",
+    "env = gym.make('forex-v0', df=df,frame_bound=(21, 200), window_size=1)\n",
+    "# env = gym.make('stocks-v0', frame_bound=(50, 100), window_size=10)\n",
+    "\n",
+    "pastCloses = list(df['Close'][0:20])\n",
+    "observation = env.reset()\n",
+    "sold = False\n",
+    "action = 0\n",
+    "while True:\n",
+    "    \n",
+    "    action, sold = decide(pastCloses,observation,sold,action)\n",
+    "    \n",
+    "    pastCloses.append(observation[0][0])\n",
+    "    observation, reward, done, info = env.step(action)\n",
+    "\n",
+    "    if done:\n",
+    "        pastCloses.append(observation[0][0])\n",
+    "        print(\"info:\", info)\n",
+    "        break\n",
+    "\n",
+    "print(pastCloses) #== \n",
+    "#print(list(df['Close'][0:199]))\n",
+    "plt.cla()\n",
+    "env.render_all()\n",
+    "plt.show()\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gym\n",
-    "import gym_anytrading\n",
-    "from gym_anytrading.envs import TradingEnv, ForexEnv, StocksEnv, Actions, Positions \n",
-    "from gym_anytrading.datasets import FOREX_EURUSD_1H_ASK, STOCKS_GOOGL\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "from EnvNDisplay import display"
    ]
   },
   {
@@ -90,33 +122,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "df = pd.read_csv(\"FOREX_EURUSD_1H_ASK_DAILY.csv\")\n",
-    "env = gym.make('forex-v0', df=df,frame_bound=(21, 200), window_size=1)\n",
-    "# env = gym.make('stocks-v0', frame_bound=(50, 100), window_size=10)\n",
-    "\n",
-    "pastCloses = list(df['Close'][0:20])\n",
-    "observation = env.reset()\n",
-    "sold = False\n",
-    "action = 0\n",
-    "while True:\n",
-    "    \n",
-    "    action, sold = rndCide(pastCloses,observation,sold,action)\n",
-    "    \n",
-    "    pastCloses.append(observation[0][0])\n",
-    "    observation, reward, done, info = env.step(action)\n",
-    "\n",
-    "    if done:\n",
-    "        pastCloses.append(observation[0][0])\n",
-    "        print(\"info:\", info)\n",
-    "        break\n",
-    "\n",
-    "print(pastCloses) #== \n",
-    "#print(list(df['Close'][0:199]))\n",
-    "plt.cla()\n",
-    "env.render_all()\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -155,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -180,31 +186,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"FOREX_EURUSD_1H_ASK_DAILY.csv\")\n",
-    "env = gym.make('forex-v0', df=df,frame_bound=(21, 200), window_size=1)\n",
-    "# env = gym.make('stocks-v0', frame_bound=(50, 100), window_size=10)\n",
-    "\n",
-    "pastCloses = list(df['Close'][0:20])\n",
-    "observation = env.reset()\n",
-    "sold = False\n",
-    "action = 0\n",
-    "while True:\n",
-    "    \n",
-    "    action, sold = turtleCide(pastCloses,observation,sold,action)\n",
-    "    \n",
-    "    pastCloses.append(observation[0][0])\n",
-    "    observation, reward, done, info = env.step(action)\n",
-    "\n",
-    "    if done:\n",
-    "        pastCloses.append(observation[0][0])\n",
-    "        print(\"info:\", info)\n",
-    "        break\n",
-    "\n",
-    "print(pastCloses) #== \n",
-    "#print(list(df['Close'][0:199]))\n",
-    "plt.cla()\n",
-    "env.render_all()\n",
-    "plt.show()"
+    "display(turtleCide)"
    ]
   },
   {
